--- a/deploy/index.html
+++ b/deploy/index.html
@@ -103,7 +103,7 @@
                     
                                     <li id="bimg-container">
                                         <div id="blade-img">
-                                            <img src="Images/product-details/blade.png" alt="">
+                                            <!-- <img src="Images/product-details/blade.png" alt=""> -->
                                         </div>
                     
                                     </li>
