--- a/deploy/cart.html
+++ b/deploy/cart.html
@@ -78,7 +78,7 @@
         
 
 
-    <section id="cart">
+    <section id="cart" class="nav-padding">
 
         <div>
 
@@ -215,7 +215,7 @@
                       
                       </div>
                       <aside>
-                          <h3>Jojoba Oil</h3>
+                          <h3>Pure Jojoba Oil</h3>
                           <p>$5.00</p>
                           <button><a href="#"> Add to Cart</a></button>
                       </aside>
